Added header and link.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/>
 </head>
 <body>
+  <h1>Discover hidden places in the world around you</h1>
+  <a href="https://fsavnqf20pm0oh5a06bk71cqbt4go0a22djnkcncns5mvcp9odh0.codecademy.cloud/#">Download Excursion (Coming Soon)</a>
 </body>
 </html>
