--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="/resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
 </head>
 <body>
-  <h1>Discover hidden places in the world around you</h1>
-  <a href="https://fsavnqf20pm0oh5a06bk71cqbt4go0a22djnkcncns5mvcp9odh0.codecademy.cloud/#">Download Excursion (Coming Soon)</a>
+
+  <h1 id="cta">Discover hidden places in the world around you</h1>
+  <a class="cta" href="https://fsavnqf20pm0oh5a06bk71cqbt4go0a22djnkcncns5mvcp9odh0.codecademy.cloud/#">Download Excursion (Coming Soon)</a>
+
+  <p><video autoplay="" muted="" loops="">
+        <source src="resources/videos/excursion.mp4" type="video/mp4"/>
+      </video>
+
+  <h2>Your personal travel guide</h2>
+
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <p><img src="resources/images/camp.jpg"/></p>
+
+    <p><img src="resources/images/phone.png"/></p>
+
+  <h2>Coming Soon for iPhone and Android</h2>
 </body>
 </html>
