--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-  <h1 id="cta">Discover hidden places in the world around you</h1>
+  <h1>Discover hidden places in the world around you</h1>
+  
   <a class="cta" href="https://fsavnqf20pm0oh5a06bk71cqbt4go0a22djnkcncns5mvcp9odh0.codecademy.cloud/#">Download Excursion (Coming Soon)</a>
 
   <p><video autoplay="" muted="" loops="">
@@ -15,12 +16,16 @@
 
   <h2>Your personal travel guide</h2>
 
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p id="copy">Excursion remembers places you like, and recommends new points of interest around you.</p>
 
     <p><img src="resources/images/camp.jpg"/></p>
 
     <p><img src="resources/images/phone.png"/></p>
 
   <h2>Coming Soon for iPhone and Android</h2>
-</body>
+
+  <div class="footer">
+    <p>√ Excursion</p>
+  </div>
+<body>
 </html>
